0.4.2-dev:
[CLIENT]
[SERVER]
+ Heartbeats can now be ran independently of the file server.
* WARNING! LOCAL MODE IS NOW SELECTED IN CONFIG

0.4.1:
[CLIENT]
* Fix changelog option.
/ Major refactor. Might still be a tiny bit buggy.
[SERVER]
+ Window name is now set on the server side.

0.4.0:
[CLIENT]
/ Bump version.
[SERVER]
* Fix a bug where launcher.enabled did nothing.
/ Update modDB.

0.4.0-rc4 (server-only):
[SERVER]
+ Introduce modDB for filling in mods without mcmod.info.

0.4.0-rc3 (server-only):
[SERVER]
+ Add Forge v2 mod parsing (Immibis)
* Fix a few miscellaneous bugs.

0.4.0-rc2 (server-only):
[SERVER]
* Fix a bug where the URL was not sent to the serverlist.
* Fix error handling for mods and plugins.

0.4.0-rc1 (server-only):
[SERVER]
+ Send the mod and plugin list via the heartbeat! (Disableable in the config.)
+ The server now reads server.properties (when possible) to get whitelist/online mode information.
* Optimize heartbeat-sent data a bit further.
* Fix a few bugs.
/ Fix tabbing on all internal files.

0.4.0-beta9:
[CLIENT]
* Fix JAR repacking bug.
[SERVER]
* Fix using non-ZIP/JAR files as jarPatches.

0.4.0-beta8:
[CLIENT]
* Fix authentication bugs.
[SERVER]
+ Add sending server/client version via heartbeat.
+ Resolve ~ home paths for lookupDirectories.
* Invalidate the UUID accidentally spread in beta7.

0.4.0-beta7 (server-only):
[SERVER]
+ Completely change config file format.
* Fix launcher exporting in local mode.

0.4.0-beta6 (server-only):
[SERVER]
+ Add code to update package.json. (If not working, remove AsieLauncher/internal/info.json and try again.)
* Fix JAR repacking.
* Fix many other issues in the preceding hotfixes.

0.4.0-beta5:
[CLIENT]
+ Add logging to file.
/ Change logging format to use Java's Logger
[SERVER]
+ The server now generates the launcher.jar!
+ Major rewrite - server now updates itself! Yes, seriously. It also updates the launcher.
/ Refactor a lot of the code.

0.4.0-beta4:
[CLIENT]